--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,26 +28,24 @@ jobs:
       - name: Build app
         run: npm run build
 
-      # Step 5: Deploy to server via SSH (password)
-      - name: Deploy to Apache
+      # Step 5: Copy build files to server via SCP
+      - name: Copy build to server
+        uses: appleboy/scp-action@v0.1.0
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          source: "build/*"
+          target: "/var/www/html/"
+
+      # Step 6: Set permissions & restart Apache
+      - name: Fix permissions & restart Apache
         uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
-            # Backup old website
-            sudo mv /var/www/html /var/www/html_backup_$(date +%Y%m%d_%H%M%S) || true
-
-            # Create document root
-            sudo mkdir -p /var/www/html
-
-            # Copy new build files
-            sudo cp -r build/* /var/www/html/
-
-            # Set permissions
             sudo chown -R www-data:www-data /var/www/html
             sudo chmod -R 755 /var/www/html
-
-            # Restart Apache
             sudo systemctl restart apache2
